# Systematix

./: .gitignore  .pre-commit-config.yaml  AMERICAN_LSMC_COMPLETION.md  AMERICAN_LSMC_IMPLEMENTATION.md  ARCHITECTURE_FINAL.md  CLEANUP_CHECKLIST.md  CLEANUP_EXECUTION_GUIDE.md  DASHBOARD_GUIDE.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  GREEKS_REGENERATION_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LSMC_ALGORITHM_GUIDE.md  MATHEMATICAL_FEATURES.md  PROJECT_SUMMARY.md  QUICK_REFERENCE_AMERICAN_LSMC.md  QUICK_START.md  README.md  README_CLEANUP.md  SCENE_AXIS_TITLE_FIX.md  SETUP_CHECKLIST.py  SYNTAX_ERROR_FIX.md  TASK_COMPLETION_SUMMARY.md  TEXT_AND_INPUT_STYLING_UPDATE.md  app.py  audit_numerical_issues.py  dashboard_v2.py  final_validation.py  greeks.py  history_utils.py  payoff_utils.py  payoffs.py  pricing.py  pyproject.toml  requirements.txt  rng.py  setup.py  simulator.py  (+22 more)
analytics/: __init__.py  calibration.py  diagnostics.py  greeks.py  pricing.py  risk.py
config/: schemas.py  settings.py
core/: brownian.py  lsm.py  mc_engine.py  numerics.py  rng_distributions.py  rng_engines.py  variance_reduction.py
instruments/: __init__.py  base.py  custom_payoff.py  payoffs_exotic.py  payoffs_rates_fx.py  payoffs_vanilla.py  registry.py
models/: __init__.py  bachelier.py  base.py  gbm.py  heston.py  heston_3_2.py  kou_jump.py  local_volatility.py  merton_jump.py  monte_carlo.py  multi_asset.py  payoffs.py  processes.py  regime_switching.py  sabr.py  shifted_lognormal.py  sobol_wrapper.py
pages/: volatility_surface.py
(+34 files in other folders)
