[tool.poetry]
name = "systematix"
version = "0.1.0"
description = "Professional options pricing dashboard"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.2"
streamlit = "^1.30"
plotly = "^5.16"
pytest = "^7.4"

[tool.poetry.dev-dependencies]
black = "^24.1"
isort = "^5.12"
mypy = "^1.5"
ruff = "^0.6"
bandit = "^1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

